# student-management-system

./: course.py  db.py  exceptions.py  grade.py  jwt.py  main.py  models.py  pyproject.toml  schema.py  service.py  student_router.py  user_router.py
